instrument 6 -- readonly in loc de disabled

--- a/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_ru.html
+++ b/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_ru.html
@@ -142,15 +142,15 @@
             </div>
         </div>
 
-        <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">2 ПОСТУПЛЕНИЯ И ВЫХОДЫ ИЗ ЭТОГО УЧРЕЖДЕНИЯ С 1 ЯНВАРЯ ПО 31 ДЕКАБРЯ ОТЧЕТНОГО ГОДА</h2>
+        <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">2 ПОСТУПЛЕНИЯ И ВЫХОДЫ ИЗ ЭТОГО УЧРЕЖДЕНИЯ С 1 ЯНВАРЯ ПО 31 ДЕКАБРЯ отчетного года (2023)</h2>
         <div class="grid grid-cols-3 gap-4 items-center mt-4">
-            <div class="col-span-2">TNR0. Общее количество детей в данном учреждении на 31 декабря года, предшествующему отчетному году</div>
+            <div class="col-span-2">TNR0. Общее количество детей в данном учреждении на 31 декабря года, предшествующему отчетному году (2023)</div>
             <div class="col-span-1">
                 <input type="text" id="tnr0" name="tnr0" class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
             </div>
         </div>
         <div class="grid grid-cols-3 gap-4 items-center mt-4">
-            <div class="col-span-2">NET1. Были ли какие-либо поступления (какими-либо способами) в это заведение в период с 1 января 2023 года по 31 декабря отчетного года?</div>
+            <div class="col-span-2">NET1. Были ли какие-либо поступления (какими-либо способами) в это заведение в период с 1 января 2023 года по 31 декабря отчетного года (2023)?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="net1-1" type="radio" value="1" name="net1" class="w-4 h-4 text-blue-600 border-gray-300 focus:ring-blue-500 disabled:bg-gray-200">
@@ -163,8 +163,8 @@
             </div>
         </div>
         <small class="italic">Если да,</small>
-        <p class="font-medium mt-6">Количество поступлений в это учреждение в течение отчетного года</p>
-        <table class="w-full" aria-describedby="Количество поступлений в это учреждение в течение отчетного года">
+        <p class="font-medium mt-6">Количество поступлений в это учреждение в течение отчетного года (2023)</p>
+        <table class="w-full" aria-describedby="Количество поступлений в это учреждение в течение отчетного года (2023)">
             <thead>
                 <tr class="border-b pb-1 mb-1">
                     <th class="p-2"></th>
@@ -236,17 +236,17 @@
                 </tr>
                 <tr class="border-b">
                     <td class="p-2">
-                        <p class="block">ТНЕТ. Всего поступлений в это учреждение в течение отчетного года</p>
+                        <p class="block">ТНЕТ. Всего поступлений в это учреждение в течение отчетного года (2023)</p>
                         <small class="italic">Рассчитывается автоматически</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnet_b" name="tnet_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnet_b" name="tnet_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnet_g" name="tnet_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnet_g" name="tnet_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnet_t" name="tnet_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnet_t" name="tnet_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
@@ -304,19 +304,19 @@
                         <small class="italic">Рассчитывается автоматически</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="nest_b" name="nest_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="nest_b" name="nest_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="nest_g" name="nest_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="nest_g" name="nest_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="nest_t" name="nest_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="nest_t" name="nest_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
         </table>
 
-                <p class="mt-6 font-medium">Переводы из других учреждений</p>
+        <p class="mt-6 font-medium">Переводы из других учреждений</p>
         <table class="w-full" aria-describedby="Переводы из других учреждений">
             <thead>
                 <tr class="border-b pb-1 mb-1">
@@ -429,20 +429,20 @@
                         <small class="italic">Рассчитывается автоматически</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="neo_b" name="neo_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="neo_b" name="neo_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="neo_g" name="neo_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="neo_g" name="neo_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="neo_t" name="neo_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="neo_t" name="neo_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
         </table>
 
         <div class="grid grid-cols-3 gap-4 items-center mt-4">
-            <div class="col-span-2">NEX1. Были ли выходы (любыми способами) из этого учреждения в период с 1 января 2023 года по 31 декабря отчетного года?</div>
+            <div class="col-span-2">NEX1. Были ли выходы (любыми способами) из этого учреждения в период с 1 января 2023 года по 31 декабря отчетного года (2023)?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="nex1-1" type="radio" value="1" name="nex1" class="w-4 h-4 text-blue-600 border-gray-300 focus:ring-blue-500 disabled:bg-gray-200">
@@ -538,17 +538,17 @@
                 </tr>
                 <tr class="border-b">
                     <td class="p-2">
-                        <p class="block">NEXT. Общее количество выходов из этого учреждения в течение отчетного года</p>
+                        <p class="block">NEXT. Общее количество выходов из этого учреждения в течение отчетного года (2023)</p>
                         <small class="italic">Рассчитывается автоматически</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="next_b" name="next_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="next_b" name="next_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="next_g" name="next_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="next_g" name="next_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="next_t" name="next_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="next_t" name="next_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
@@ -619,13 +619,13 @@
                         <small class="italic">Рассчитывается автоматически</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="eost_b" name="eost_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="eost_b" name="eost_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="eost_g" name="eost_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="eost_g" name="eost_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="eost_t" name="eost_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="eost_t" name="eost_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
@@ -743,13 +743,13 @@
                         <p class="block">EXTT. Переводы на другие альтернативные службы для детей - Всего</p>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="extt_b" name="extt_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="extt_b" name="extt_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="extt_g" name="extt_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="extt_g" name="extt_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="extt_t" name="extt_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="extt_t" name="extt_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
@@ -804,16 +804,16 @@
                 </tr>
                 <tr class="border-b">
                     <td class="p-2">
-                        <p class="block">TNR1. Общее количество детей в этом учреждении на 31 декабря отчетного года</p>
+                        <p class="block">TNR1. Общее количество детей в этом учреждении на 31 декабря отчетного года (2023)</p>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnr1_b" name="tnr1_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnr1_b" name="tnr1_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnr1_g" name="tnr1_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnr1_g" name="tnr1_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnr1_t" name="tnr1_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnr1_t" name="tnr1_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
