--- a/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_uz.html
+++ b/src/templates/6_UZ_ChildDI_Entries_Exists_Sheet_uz.html
@@ -142,15 +142,15 @@
             </div>
         </div>
 
-        <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">2 HISOBOT YILINING 1-YANVAR VA 31-DEKABR ORASIDA USHBU MUASSASAGA QABUL QILINISHI  VA CHIQISHI</h2>
+        <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">2 HISOBOT YILINING 1-YANVAR VA 31-DEKABR ORASIDA USHBU MUASSASAGA QABUL QILINISHI  VA CHIQISHI (2023)</h2>
         <div class="grid grid-cols-3 gap-4 items-center mt-4">
-            <div class="col-span-2">TNR0. Hisobot yilidan avvalgi yilning 31 dekabr holatida ushbu muassasadagi bolalarning umumiy soni</div>
+            <div class="col-span-2">TNR0. Hisobot yilidan avvalgi yilning 31 dekabr holatida ushbu muassasadagi bolalarning umumiy soni (2023)</div>
             <div class="col-span-1">
                 <input type="text" id="tnr0" name="tnr0" class="disabled:bg-gray-100 bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
             </div>
         </div>
         <div class="grid grid-cols-3 gap-4 items-center mt-4">
-            <div class="col-span-2">NET1. Hisobot yilining  1-yanvardan 31-dekabrgacha ushbu muassasaga biron bir qabul qilinish (har qanday usul bilan) bo&#39;lganmi?</div>
+            <div class="col-span-2">NET1. Hisobot yilining  1-yanvardan 31-dekabrgacha ushbu muassasaga biron bir qabul qilinish (har qanday usul bilan) bo&#39;lganmi (2023)?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="net1-1" type="radio" value="1" name="net1" class="w-4 h-4 text-blue-600 border-gray-300 focus:ring-blue-500 disabled:bg-gray-200">
@@ -163,8 +163,8 @@
             </div>
         </div>
         <small class="italic">Ha bo&#39;lsa,</small>
-        <p class="font-medium mt-6">Hisobot yili davomida ushbu muassasaga qabul qilinishlar soni</p>
-        <table class="w-full" aria-describedby="Hisobot yili davomida ushbu muassasaga qabul qilinishlar soni">
+        <p class="font-medium mt-6">Hisobot yili davomida ushbu muassasaga qabul qilinishlar soni (2023)</p>
+        <table class="w-full" aria-describedby="Hisobot yili davomida ushbu muassasaga qabul qilinishlar soni (2023)">
             <thead>
                 <tr class="border-b pb-1 mb-1">
                     <th class="p-2"></th>
@@ -236,17 +236,17 @@
                 </tr>
                 <tr class="border-b">
                     <td class="p-2">
-                        <p class="block">TNET. Hisobot yili davomida ushbu muassasaga jami qabul qilinishlar</p>
+                        <p class="block">TNET. Hisobot yili davomida ushbu muassasaga jami qabul qilinishlar (2023)</p>
                         <small class="italic">Avtomatik ravishda hisoblab chiqiladi</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnet_b" name="tnet_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnet_b" name="tnet_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnet_g" name="tnet_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnet_g" name="tnet_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnet_t" name="tnet_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnet_t" name="tnet_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
@@ -304,19 +304,19 @@
                         <small class="italic">Avtomatik ravishda hisoblab chiqiladi</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="nest_b" name="nest_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="nest_b" name="nest_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="nest_g" name="nest_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="nest_g" name="nest_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="nest_t" name="nest_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="nest_t" name="nest_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
         </table>
 
-                <p class="mt-6 font-medium">Boshqa muassasalardan o&#39;tkazilgan bolalar</p>
+        <p class="mt-6 font-medium">Boshqa muassasalardan o&#39;tkazilgan bolalar</p>
         <table class="w-full" aria-describedby="Boshqa muassasalardan o&#39;tkazilgan bolalar">
             <thead>
                 <tr class="border-b pb-1 mb-1">
@@ -429,20 +429,20 @@
                         <small class="italic">Avtomatik ravishda hisoblab chiqiladi</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="neo_b" name="neo_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="neo_b" name="neo_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="neo_g" name="neo_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="neo_g" name="neo_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="neo_t" name="neo_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="neo_t" name="neo_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
         </table>
 
         <div class="grid grid-cols-3 gap-4 items-center mt-4">
-            <div class="col-span-2">NEX1. 2023-yil hisobot yuilining 1 yanvaridan 31 dekabrigacha ushbu muassasadan (har qanday usulda) chiqishlar bo&#39;lganmi?</div>
+            <div class="col-span-2">NEX1. 2023-yil hisobot yuilining 1 yanvaridan 31 dekabrigacha ushbu muassasadan (har qanday usulda) chiqishlar bo&#39;lganmi (2023)?</div>
             <div class="col-span-1 flex gap-4">
                 <div class="flex items-center">
                     <input id="nex1-1" type="radio" value="1" name="nex1" class="w-4 h-4 text-blue-600 border-gray-300 focus:ring-blue-500 disabled:bg-gray-200">
@@ -538,17 +538,17 @@
                 </tr>
                 <tr class="border-b">
                     <td class="p-2">
-                        <p class="block">NEXT. Hisobot yilining davomida ushbu muassasadan chiqishlarning umumiy soni</p>
+                        <p class="block">NEXT. Hisobot yilining davomida ushbu muassasadan chiqishlarning umumiy soni (2023)</p>
                         <small class="italic">Avtomatik ravishda hisoblab chiqiladi</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="next_b" name="next_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="next_b" name="next_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="next_g" name="next_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="next_g" name="next_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="next_t" name="next_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="next_t" name="next_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
@@ -619,13 +619,13 @@
                         <small class="italic">Avtomatik ravishda hisoblab chiqiladi</small>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="eost_b" name="eost_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="eost_b" name="eost_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="eost_g" name="eost_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="eost_g" name="eost_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="eost_t" name="eost_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="eost_t" name="eost_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
@@ -743,13 +743,13 @@
                         <p class="block">EXTT. Bolalar uchun boshqa muqobil xizmatlarga o&#39;tkazmalar - Jami</p>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="extt_b" name="extt_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="extt_b" name="extt_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="extt_g" name="extt_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="extt_g" name="extt_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="extt_t" name="extt_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="extt_t" name="extt_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
@@ -804,16 +804,16 @@
                 </tr>
                 <tr class="border-b">
                     <td class="p-2">
-                        <p class="block">TNR1. Hisobot yilining 31 dekabr holatiga ushbu muassasadagi bolalarning umumiy soni</p>
+                        <p class="block">TNR1. Hisobot yilining 31 dekabr holatiga ushbu muassasadagi bolalarning umumiy soni (2023)</p>
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnr1_b" name="tnr1_b" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnr1_b" name="tnr1_b" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnr1_g" name="tnr1_g" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnr1_g" name="tnr1_g" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                     <td class="p-2 text-center">
-                        <input type="text" id="tnr1_t" name="tnr1_t" disabled class="bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
+                        <input type="text" id="tnr1_t" name="tnr1_t" readonly class="read-only:bg-gray-100 bg-white border disabled:bg-gray-100 border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block w-24 p-2.5" />
                     </td>
                 </tr>
             </tbody>
