--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -35,6 +35,11 @@ span.errorSpan {
     background-color: rgba(255, 0, 0, 0.1)!important;
     box-shadow: 0 0 0 0.25rem rgb(255 0 0 / 25%)!important;
 }
+.error-in-field:disabled{
+    border: 1px solid red!important;
+    background-color: rgba(255, 0, 0, 0.1)!important;
+    box-shadow: 0 0 0 0.25rem rgb(255 0 0 / 25%)!important;
+}
 
 .error-in-radio {
     background-color: rgba(255, 0, 0, 0.1)!important;
