--- a/src/templates/8_UZ_ChildDI_Patronat_Family_en.html
+++ b/src/templates/8_UZ_ChildDI_Patronat_Family_en.html
@@ -689,7 +689,7 @@
                     <th class="p-2"></th>
                     <th class="w-40 p-2">a. Gender.</th>
                     <th class="p-2">b. Age.</th>
-                    <th class="w-52 p-2">c. Has a disability?.?</th>
+                    <th class="w-52 p-2">c. Has a disability?</th>
                     <th class="p-2">d. Reason for leaving.</th>
                 </tr>
             </thead>
